bootstrap/battery-simulation/components/influx-exporter/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: influx-exporter
  labels:
    app: influx-exporter
    app.kubernetes.io/component: influx-exporter
    app.kubernetes.io/instance: influx-exporter
    app.kubernetes.io/name: influx-exporter
spec:
  ports:
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
      nodePort: 31443
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31080
  type: NodePort
  selector:
    app: influx-exporter
    deployment: influx-exporter
