bootstrap/battery-simulation/components/influx-exporter/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: influx-exporter
  labels:
    app: influx-exporter
    app.kubernetes.io/component: influx-exporter
    app.kubernetes.io/instance: influx-exporter
    app.kubernetes.io/name: influx-exporter
spec:
  to:
    kind: Service
    name: influx-exporter
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
